creating new book functionality

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,14 +12,8 @@
   <dd><%= @book.description %></dd>
   <dt><strong><%= model_class.human_attribute_name(:publishing_house) %>:</strong></dt>
   <dd><%= @book.publishing_house %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:image_file_name) %>:</strong></dt>
-  <dd><%= @book.image_file_name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:image_content_type) %>:</strong></dt>
-  <dd><%= @book.image_content_type %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:image_file_size) %>:</strong></dt>
-  <dd><%= @book.image_file_size %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:image_updated_at) %>:</strong></dt>
-  <dd><%= @book.image_updated_at %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:image) %>:</strong></dt>
+  <dd><%= image_tag @book.image.url, height: 'auto', width: '100px'; %></dd>
 </dl>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
