--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @book, :html => { :class => "form-horizontal book" } do |f| %>
+<%= form_for @book, html: { multipart: true }, :html => { :class => "form-horizontal book" } do |f| %>
 
   <% if @book.errors.any? %>
     <div id="error_expl" class="panel panel-danger">
@@ -32,7 +32,7 @@
   <div class="form-group">
     <%= f.label :description, :class => 'control-label col-lg-2' %>
     <div class="col-lg-10">
-      <%= f.text_field :description, :class => 'form-control' %>
+      <%= f.text_area :description, :class => 'form-control' %>
     </div>
     <%=f.error_span(:description) %>
   </div>
@@ -44,32 +44,11 @@
     <%=f.error_span(:publishing_house) %>
   </div>
   <div class="form-group">
-    <%= f.label :image_file_name, :class => 'control-label col-lg-2' %>
+    <%= f.label :image, :class => 'control-label col-lg-2' %>
     <div class="col-lg-10">
-      <%= f.text_field :image_file_name, :class => 'form-control' %>
+      <%= f.file_field :image, :class => 'form-control' %>
     </div>
-    <%=f.error_span(:image_file_name) %>
-  </div>
-  <div class="form-group">
-    <%= f.label :image_content_type, :class => 'control-label col-lg-2' %>
-    <div class="col-lg-10">
-      <%= f.text_field :image_content_type, :class => 'form-control' %>
-    </div>
-    <%=f.error_span(:image_content_type) %>
-  </div>
-  <div class="form-group">
-    <%= f.label :image_file_size, :class => 'control-label col-lg-2' %>
-    <div class="col-lg-10">
-      <%= f.text_field :image_file_size, :class => 'form-control' %>
-    </div>
-    <%=f.error_span(:image_file_size) %>
-  </div>
-  <div class="form-group">
-    <%= f.label :image_updated_at, :class => 'control-label col-lg-2' %>
-    <div class="col-lg-10">
-      <%= f.text_field :image_updated_at, :class => 'form-control' %>
-    </div>
-    <%=f.error_span(:image_updated_at) %>
+    <%=f.error_span(:image) %>
   </div>
 
   <div class="form-group">
