adding vote to database and calculation average rating of book. Form is sending by click on the star.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,4 +12,15 @@
  *
  *= require_tree .
  *= require_self
+ *= require font-awesome
  */
+ .stars{
+
+ }
+.checked{
+  color:#FFBF00;
+ }
+ .fa-star{
+   font-size: 30px!important;
+   cursor:pointer;
+ }
