--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,6 +9,7 @@
       <th><%= model_class.human_attribute_name(:title) %></th>
       <th><%= model_class.human_attribute_name(:author) %></th>
       <th><%= model_class.human_attribute_name(:publishing_house) %></th>
+      <th><%= model_class.human_attribute_name(:rating) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
@@ -19,6 +20,7 @@
         <td><%= book.title %></td>
         <td><%= book.author %></td>
         <td><%= book.publishing_house %></td>
+        <td><%= book.rate.round(2) %></td>
         <td>
           <%= link_to t('.show', :default => t("helpers.links.show")),
                       book_path(book), :class => 'btn btn-default btn-xs' %>
