--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,16 +21,16 @@
   <!-- <%= select_tag 'rate', options_for_select([1,2,3,4,5,6,7,8,9,10], 1), class: 'form-controll' %><br /> -->
   <%= hidden_field_tag 'rate', 1, id: 'rate' %>
     <div class="stars" id="stars_rate">
-        <span class="fa fa-star" id="star_1"></span>
-        <span class="fa fa-star" id="star_2"></span>
-        <span class="fa fa-star" id="star_3"></span>
-        <span class="fa fa-star" id="star_4"></span>
-        <span class="fa fa-star" id="star_5"></span>
-        <span class="fa fa-star" id="star_6"></span>
-        <span class="fa fa-star" id="star_7"></span>
-        <span class="fa fa-star" id="star_8"></span>
-        <span class="fa fa-star" id="star_9"></span>
-        <span class="fa fa-star" id="star_10"></span>
+        <span class="star" id="star_10">&#9734;</span>
+        <span class="star" id="star_9">&#9734;</span>
+        <span class="star" id="star_8">&#9734;</span>
+        <span class="star" id="star_7">&#9734;</span>
+        <span class="star" id="star_6">&#9734;</span>
+        <span class="star" id="star_5">&#9734;</span>
+        <span class="star" id="star_4">&#9734;</span>
+        <span class="star" id="star_3">&#9734;</span>
+        <span class="star" id="star_2">&#9734;</span>
+        <span class="star" id="star_1">&#9734;</span>
     </div>
 <% end %>
 
