--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,16 +21,13 @@
    direction:rtl;
    text-align: left;
    font-size: 30px;
-
  }
- .stars > .star{
-   display:inline-block;
-   position:relative;
-   width:1em;
+ .stars > span:before{
+   content: "\f006";
+   cursor:pointer;
  }
- .stars > .star:hover:before,
- .stars > .star:hover ~ .star:before{
-   content: "\2605";
-   position: absolute;
-   color: #FFD700;
+ .stars > span:hover:before,
+ .stars > span:hover ~ span:before{
+   content: "\f005";
+   color:#DAA520;
  }
