create dynamically highlighted stars

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,11 +16,13 @@
  *= require ionicons
  */
 
+
  .stars{
    unicode-bidi: bidi-override;
    direction:rtl;
    text-align: left;
    font-size: 30px;
+   display:inline-flex;
  }
  .stars > span:before{
    content: "\f006";
@@ -31,3 +33,32 @@
    content: "\f005";
    color:#DAA520;
  }
+ .stars-none{
+   display:none;
+ }
+ .stars-outer {
+  display: inline-block;
+  position: relative;
+  font-family: FontAwesome;
+  font-size:30px;
+}
+.stars-outer::before {
+  content: "\f006 \f006 \f006 \f006 \f006 \f006 \f006 \f006 \f006 \f006";
+}
+.stars-inner{
+  position:absolute;
+  top: 0;
+  left: 0;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.stars-inner::before {
+  content: "\f005 \f005 \f005 \f005 \f005 \f005 \f005 \f005 \f005 \f005";
+  color:#DAA520;
+}
+.rate{
+  font-size: 30px;
+    display: inline-block;
+    color: #DAA520;
+    margin-left:10px;
+}
