--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,8 +33,8 @@
    content: "\f005";
    color:#DAA520;
  }
- .stars-none{
-   display:none;
+ .stars-rating{
+   margin-bottom:15px;
  }
  .stars-outer {
   display: inline-block;
