--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,31 +16,36 @@
   <dd><%= image_tag @book.image.url, height: 'auto', width: '100px'; %></dd>
 </dl>
 
-<%= form_tag(rating_book_path(@book), method: :put, class: 'form-group', id: 'rating-form') do %>
-  <%= label_tag 'Rate:' %><br />
-  <%= hidden_field_tag 'rate', 1, id: 'rate' %>
-    <div class="stars" id="stars_rate">
-        <span class="fa fa-star" id="star_10"></span>
-        <span class="fa fa-star" id="star_9"></span>
-        <span class="fa fa-star" id="star_8"></span>
-        <span class="fa fa-star" id="star_7"></span>
-        <span class="fa fa-star" id="star_6"></span>
-        <span class="fa fa-star" id="star_5"></span>
-        <span class="fa fa-star" id="star_4"></span>
-        <span class="fa fa-star" id="star_3"></span>
-        <span class="fa fa-star" id="star_2"></span>
-        <span class="fa fa-star" id="star_1"></span>
-    </div>
+<% if !session[:marked] %>
 
+  <%= form_tag(rating_book_path(@book), method: :put, class: 'form-group', id: 'rating-form') do %>
+    <%= label_tag 'Rate:' %><br />
+    <%= hidden_field_tag 'rate', 1, id: 'rate' %>
+      <div class="stars" id="stars_rate">
+          <span class="fa fa-star" id="star_10"></span>
+          <span class="fa fa-star" id="star_9"></span>
+          <span class="fa fa-star" id="star_8"></span>
+          <span class="fa fa-star" id="star_7"></span>
+          <span class="fa fa-star" id="star_6"></span>
+          <span class="fa fa-star" id="star_5"></span>
+          <span class="fa fa-star" id="star_4"></span>
+          <span class="fa fa-star" id="star_3"></span>
+          <span class="fa fa-star" id="star_2"></span>
+          <span class="fa fa-star" id="star_1"></span>
+      </div>
+  <% end %>
+<% elsif session[:marked]
+   %>
+
+  <%= label_tag 'Average Rating:' %><br />
     <div class="stars-rating" id='average-rate'>
       <div class="stars-outer">
         <div class="stars-inner" id="highlighted-stars"></div>
       </div>
       <%= render @book %>
     </div>
+
 <% end %>
-
-
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
               books_path, :class => 'btn btn-default'  %>
