adding link to top 10 books of all time and placing it in navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
             <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
+            <li><%= link_to "Top 10", top_10_books_path  %></li>
             <li><%= link_to "Link3", "/path3"  %></li>
           </ul>
         </div>
