--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -87,3 +87,28 @@
 .input-group{
   width: 100%;
 }
+/*reviews style */
+
+.reviews-section .form-group{
+  margin-bottom:0;
+}
+.reviews{
+  margin-top: 30px;
+}
+.review{
+  border-bottom: 1px solid #999999;
+  display: flex;
+  flex-direction: row;
+  margin-top:20px;
+}
+.review-content{
+  width:90%;
+}
+.review-buttons-section{
+  text-align:center;
+}
+.deleting-review{
+  margin: auto;
+  margin-top:35%;
+
+}
