--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,12 @@
           <ul class="nav navbar-nav">
             <li><%= link_to "Link1", "/path1"  %></li>
             <li><%= link_to "Top 10", top_10_books_path  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            <% if user_signed_in? %>
+              <li class="auth-button"><%= link_to "Logout", destroy_user_session_path, method: :delete  %>
+              (<%= current_user.email %>)</li>
+            <% else %>
+              <li><%= link_to 'Login', new_user_session_path, method: :get  %>
+            <% end %>
           </ul>
         </div>
       </div>
