--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,6 @@
 
+<%= render 'errors', model: @review %>
+
 <%= form_for [@book, @review] do |f| %>
   <div class="form-group">
     <%= f.label :name %><br>
