--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
         <a class="navbar-brand" href="#">BookWorm</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
+            <li><%= link_to "Books", books_path  %></li>
             <li><%= link_to "Top 10", top_10_books_path  %></li>
             <% if user_signed_in? %>
               <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
