--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -52,13 +52,15 @@
         <td>
           <%= link_to t('.show', :default => t("helpers.links.show")),
                       book_path(book), :class => 'btn btn-default btn-xs' %>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_book_path(book), :class => 'btn btn-default btn-xs' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+          <% if book.user == current_user %>
+            <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                        edit_book_path(book), :class => 'btn btn-default btn-xs' %>
+            <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       book_path(book),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-xs btn-danger' %>
+          <% end %>
         </td>
       </tr>
     <% end %>
